@@ -1,5 +1,6 @@
 package com.FA24SE088.OnlineForum.service;
 
+import com.FA24SE088.OnlineForum.dto.request.UnfollowRequest;
 import com.FA24SE088.OnlineForum.dto.response.AccountResponse;
 import com.FA24SE088.OnlineForum.dto.response.FollowResponse;
 import com.FA24SE088.OnlineForum.entity.Account;
@@ -23,6 +24,7 @@ import springfox.documentation.spi.service.contexts.SecurityContext;
 
 import java.util.Date;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
@@ -47,25 +49,56 @@ public class FollowService {
 
     public FollowResponse create(UUID id) {
         Account account = getCurrentUser();
-        Account account1 = unitOfWork.getAccountRepository().findById(id).orElseThrow(() -> new AppException(ErrorCode.ACCOUNT_NOT_FOUND));
-        Follow follow = Follow.builder()
-                .follower(account)
-                .followee(account1)
-                .status(FollowStatus.FOLLOWING.name())
-                .build();
-        return followMapper.toRespone(unitOfWork.getFollowRepository().save(follow));
+        Account account1 = unitOfWork.getAccountRepository().findById(id)
+                .orElseThrow(() -> new AppException(ErrorCode.ACCOUNT_NOT_FOUND));
+        if (account.getAccountId().equals(account1.getAccountId())) {
+            throw new AppException(ErrorCode.CANNOT_FOLLOW_SELF);
+        }
+
+        // Kiểm tra nếu currentUser đã theo dõi account1 hay chưa
+        boolean alreadyFollow = account.getFollowerList().stream()
+                .anyMatch(follow -> follow.getFollowee().getAccountId().equals(account1.getAccountId()));
+
+        if(alreadyFollow){
+            throw new AppException(ErrorCode.ACCOUNT_HAS_BEEN_FOLLOWED);
+        }
+        else {
+            Follow follow = Follow.builder()
+                    .follower(account)
+                    .followee(account1)
+                    .status(FollowStatus.FOLLOWING.name())
+                    .build();
+            return followMapper.toRespone(unitOfWork.getFollowRepository().save(follow));
+        }
     }
 
-    public void unfollow(UUID id){
 
+    public void unfollow(UnfollowRequest request){
+        Account account = getCurrentUser();
+        Account follower = unitOfWork.getAccountRepository().findById(request.getAccountID())
+                .orElseThrow(() -> new AppException(ErrorCode.ACCOUNT_NOT_FOUND));
+        if (account.getAccountId().equals(follower.getAccountId())) {
+            throw new AppException(ErrorCode.CANNOT_UNFOLLOW_SELF);
+        }
+
+        Follow follow = unitOfWork.getFollowRepository().findByFollowerAndFollowee(account, follower)
+                .orElseThrow(() -> new AppException(ErrorCode.FOLLOW_NOT_FOUND));
+
+        unitOfWork.getFollowRepository().delete(follow);
     }
 
     public void blockUser(UUID accountIdToBlock) {
         Account currentUser = getCurrentUser();
-        // Tìm tài khoản cần chặn
         Account accountToBlock = unitOfWork.getAccountRepository().findById(accountIdToBlock)
                 .orElseThrow(() -> new AppException(ErrorCode.ACCOUNT_NOT_FOUND));
-        // Kiểm tra xem đã chặn chưa
+        if (currentUser.getAccountId().equals(accountToBlock.getAccountId())) {
+            throw new AppException(ErrorCode.CANNOT_BLOCK_SELF);
+        }
+        // Kiểm tra nếu currentUser đã follow accountToBlock
+        Optional<Follow> followOptional = unitOfWork.getFollowRepository().findByFollowerAndFollowee(currentUser, accountToBlock);
+
+        followOptional.ifPresent(follow -> unitOfWork.getFollowRepository().delete(follow));
+
         boolean alreadyBlocked = currentUser.getBlockedAccounts().stream()
                 .anyMatch(blocked -> blocked.getBlocked().getAccountId().equals(accountToBlock.getAccountId()));
 
@@ -79,14 +112,29 @@ public class FollowService {
         }
     }
 
+    public void unblock(UUID accountIdToUnblock) {
+        Account currentUser = getCurrentUser();
+        Account accountToUnblock = unitOfWork.getAccountRepository().findById(accountIdToUnblock)
+                .orElseThrow(() -> new AppException(ErrorCode.ACCOUNT_NOT_FOUND));
+        if (currentUser.getAccountId().equals(accountToUnblock.getAccountId())) {
+            throw new AppException(ErrorCode.CANNOT_UNBLOCK_SELF);
+        }
+        BlockedAccount blockedAccount = unitOfWork.getBlockedAccountRepository()
+                .findByBlockerAndBlocked(currentUser, accountToUnblock)
+                .orElseThrow(() -> new AppException(ErrorCode.BLOCK_NOT_FOUND));
+
+        unitOfWork.getBlockedAccountRepository().delete(blockedAccount);
+    }
+
+
     public List<FollowResponse> getFollowedAccounts() {
         Account currentUser = getCurrentUser();
 
         List<Follow> followedAccounts = unitOfWork.getFollowRepository().findByFollower(currentUser);
 
         return followedAccounts.stream()
-                .map(followMapper::toRespone) // Chuyển đổi sang FollowResponse
-                .collect(Collectors.toList());
+                .map(followMapper::toRespone)
+                .toList();
     }
 
     public List<AccountResponse> listBlock() {
